--- a/css/custom.scss
+++ b/css/custom.scss
@@ -6,8 +6,191 @@
 
 
 
+body {
+	font-family: 'Lato', sans-serif;
+}
 
+header.home_default_image {
+	background: url('../img/home_1.jpg') no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
 
+header.page_default_image {
+	background: url('../img/home_1.jpg') no-repeat;
+	background-size: 100%;
+	background-attachment: fixed;
+}
+
+.parallax.parallax_default_image {
+	background: url('../img/parallax.jpg') no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+.content {
+	
+	h1,h2,h3 {
+		font-family: 'Merriweather', serif;
+	}
+	
+	h1 {
+		text-align: center;
+	}
+	
+	hr.divider {
+		margin: 30px auto;
+	}
+	
+	span.pricing_tagline {
+		font-size: 24px;
+		font-weight: 400;
+		margin-bottom: 40px;
+	}
+	
+	p.fine_print {
+		font-size: 12px;
+		line-height: 16px;
+		color: #777;
+	}
+	
+	p.pricing_desc {
+		font-size: 20px;
+		margin-bottom: 60px;
+		
+		span.cost {
+			display: block;
+			font-family: 'Lato', sans-serif;
+			font-weight: 300;
+			color: #303133;
+			font-size: 90px;
+			float: left;
+			letter-spacing: -5px;
+			line-height: 70px;
+			padding-right: 20px;
+			
+			span.dollar {
+				font-size: .35em;
+				float: left;
+				line-height: 45px;
+			}
+		}
+	}
+}
+
+header.header_page {
+	#page_title {
+		h1.heading {
+			font-family: 'Merriweather', serif;
+		}
+	}
+}
+
+#home_logo {
+	top: 70%;
+	
+	#logo_home {
+		h1 {
+			a:link,
+			a:visited {
+				font-family: 'Merriweather', serif;
+			}
+		}
+	}
+}	
+
+/* portfolio */
+
+#work {
+	padding: 5px;
+	
+	.work_wrapper {
+		display: inline-block;
+		height: 400px;
+		margin: 0px 5px 10px 5px;
+		overflow: hidden;
+		width: calc(33.25% - 10px);
+		
+		.work_item {
+			background-position: center center;
+			background-size: cover;
+			display: block;
+			height: 100%;
+			position: relative;
+			width: 100%;
+			-webkit-transition: all .15s linear;
+			-moz-transition: all .15s linear;
+			-ms-transition: all .15s linear;
+			transition: all .15s linear;
+			
+			.filter {
+				background-color: rgba(255, 255, 255, 0.75);
+				display: block;
+				height: 100%;
+				left: 0;
+				opacity: 0;
+				width: 100%;
+				-webkit-transition: all .15s linear;
+				-moz-transition: all .15s linear;
+				-ms-transition: all .15s linear;
+				transition: all .15s linear;
+				
+				.text {
+					color: #303133;
+					display: block;
+					font-size: 28px;
+					font-weight: 500;
+					height: 40px;
+					margin-left: -250px;
+					margin-top: 40px;
+					left: 50%;
+					opacity: 0;
+					position: absolute;
+					text-align: center;
+					top: 50%;
+					width: 500px;
+					-webkit-transition: all .15s linear;
+					-moz-transition: all .15s linear;
+					-ms-transition: all .15s linear;
+					transition: all .15s linear;
+					
+					.icon {
+						display: block;
+						font-size: 14px;
+						margin-bottom: 10px;
+					}
+				}
+			}
+		}
+	}
+	
+	.work_wrapper:hover {
+		
+		.work_item {
+			transform: scale(1.05);
+			
+			.filter {
+				opacity: 1;
+				
+				.text {
+					margin-top: -20px;
+					opacity: 1;
+				}
+			}
+		}
+	}
+}
+
+.content {
+	form {
+		.gfield_checkbox {
+			li {
+				display: inline-block;
+				margin-right: 20px;
+			}
+		}
+	}
+}
 
 
 
@@ -17,12 +200,84 @@
 	
 @media (min-width: 768px) and (max-width: 979px) {
 	
+	header.home_default_image {
+		background: url('../img/home_mobile_1.jpg') no-repeat;
+		background-size: 100%;
+		background-attachment: fixed;
+	}
+	
+	header.header_page.page_default_image {
+		background: url('../img/home_mobile_1.jpg') no-repeat;
+		background-size: 100%;
+		background-attachment: fixed;
+	}
+	
+	#home_logo {
+		top: 0;
+	}
+	
+	#work {
+	
+		.work_wrapper {
+			height: 300px;
+			width: calc(50% - 10px);	
+		}
+	}
+	
 }
 	
 @media (min-width: 480px) and (max-width: 767px) {
 	
+	header.home_default_image {
+		background: url('../img/home_mobile_1.jpg') no-repeat;
+		background-size: 100%;
+		background-attachment: fixed;
+	}
+	
+	header.header_page.page_default_image {
+		background: url('../img/home_mobile_1.jpg') no-repeat;
+		background-size: 100%;
+		background-attachment: fixed;
+	}
+	
+	#home_logo {
+		top: 0;
+	}
+	
+	#work {
+	
+		.work_wrapper {
+			height: 300px;
+			width: calc(50% - 10px);	
+		}
+	}
+	
 }
 	
 @media (min-width: 0px) and (max-width: 479px) {
+	
+	header.home_default_image {
+		background: url('../img/home_mobile_1.jpg') no-repeat;
+		background-size: 100%;
+		background-attachment: fixed;
+	}
+	
+	header.header_page.page_default_image {
+		background: url('../img/home_mobile_1.jpg') no-repeat;
+		background-size: 100%;
+		background-attachment: fixed;
+	}
+	
+	#home_logo {
+		top: 0;
+	}
+	
+	#work {
+	
+		.work_wrapper {
+			height: 300px;
+			width: calc(100% - 10px);	
+		}
+	}
 	
 }
