--- a/css/login/login.css
+++ b/css/login/login.css
@@ -6,10 +6,10 @@ body.login {
 
 .login h1 a:link,
 .login h1 a:visited {
-  	background-image: url('../../img/logo_black.png');
+  	background-image: url('../../img/csdd_logo.png');
   	background-size: 80%;
   	width: 100%;
-  	height: 100px;
+  	height: 150px;
 }
 
 .login form {
@@ -27,7 +27,7 @@ body.login {
 }
 
 #loginform .submit input[type="submit"] {
-	background: #95B8BF;
+	background: #444444;
 	border: none;
 	box-shadow: none;
 	color: #ffffff;
@@ -45,7 +45,7 @@ body.login {
 .login #backtoblog a:active,
 .login #nav a:hover,
 .login #nav a:active {
-	color: #95B8BF;
+	color: #444444;
 }
 
 .login #login_error, .login .message {
