--- a/thegalaxy-child/css/custom.css
+++ b/thegalaxy-child/css/custom.css
@@ -1,209 +1,1 @@
-/* color variables */
-/* end color variables */
-body {
-  font-family: 'Lato', sans-serif; }
-
-header {
-  background: url("../img/home_3.jpg") no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-#parallax {
-  background: url("../img/parallax.jpg") no-repeat;
-  background-size: cover;
-  background-attachment: fixed; }
-
-header#header_home #home_logo .home_logo_text_wrapper,
-header#header_home #home_logo #home_logo_text_wrapper,
-header#header_home_mobile #home_logo .home_logo_text_wrapper,
-header#header_home_mobile #home_logo #home_logo_text_wrapper {
-  margin-bottom: 30px; }
-  header#header_home #home_logo .home_logo_text_wrapper h1,
-  header#header_home #home_logo #home_logo_text_wrapper h1,
-  header#header_home_mobile #home_logo .home_logo_text_wrapper h1,
-  header#header_home_mobile #home_logo #home_logo_text_wrapper h1 {
-    color: #ffffff;
-    font-family: 'Merriweather', serif;
-    font-size: 42px;
-    margin-bottom: 10px; }
-  header#header_home #home_logo .home_logo_text_wrapper h2,
-  header#header_home #home_logo #home_logo_text_wrapper h2,
-  header#header_home_mobile #home_logo .home_logo_text_wrapper h2,
-  header#header_home_mobile #home_logo #home_logo_text_wrapper h2 {
-    color: #ffffff;
-    font-size: 20px;
-    font-weight: 400; }
-
-header#header_page_mobile #page_title h1 {
-  font-family: 'Merriweather', serif; }
-
-#pricing .pricing_item {
-  display: inline-block;
-  margin-bottom: 40px;
-  padding: 0px 40px 0px 0px;
-  vertical-align: top;
-  width: calc(33.33333332% - 40px); }
-
-.content h1, .content h2, .content h3 {
-  font-family: 'Merriweather', serif; }
-
-.content h1 {
-  text-align: center;
-  margin-bottom: 40px; }
-
-.content hr.divider {
-  margin: 30px auto; }
-
-.content span.pricing_tagline {
-  display: block;
-  font-size: 24px;
-  font-weight: 400;
-  margin-bottom: 40px; }
-
-.content p.fine_print {
-  font-size: 12px;
-  line-height: 16px;
-  color: #777; }
-
-.content p.pricing_desc {
-  font-size: 20px;
-  margin-bottom: 60px; }
-  .content p.pricing_desc span.cost {
-    display: block;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    color: #303133;
-    font-size: 90px;
-    float: left;
-    letter-spacing: -5px;
-    line-height: 70px;
-    padding-right: 20px; }
-    .content p.pricing_desc span.cost span.dollar {
-      font-size: .35em;
-      float: left;
-      line-height: 45px; }
-
-.content #wufoo-sf372tc0x7lbq8 iframe {
-  height: 750px; }
-
-header#header_page #page_title h1.heading {
-  font-family: 'Merriweather', serif; }
-
-/* portfolio */
-#work {
-  padding: 5px; }
-  #work .work_wrapper {
-    display: inline-block;
-    height: 400px;
-    margin: 0px 5px 10px 5px;
-    overflow: hidden;
-    width: calc(33.25% - 10px); }
-    #work .work_wrapper .work_item {
-      background-position: center center;
-      background-size: cover;
-      display: block;
-      height: 100%;
-      position: relative;
-      width: 100%;
-      -webkit-transition: all 0.15s linear;
-      -moz-transition: all 0.15s linear;
-      -ms-transition: all 0.15s linear;
-      transition: all 0.15s linear; }
-      #work .work_wrapper .work_item .filter {
-        background-color: rgba(255, 255, 255, 0.75);
-        display: block;
-        height: 100%;
-        left: 0;
-        opacity: 0;
-        width: 100%;
-        -webkit-transition: all 0.15s linear;
-        -moz-transition: all 0.15s linear;
-        -ms-transition: all 0.15s linear;
-        transition: all 0.15s linear; }
-        #work .work_wrapper .work_item .filter .text {
-          color: #303133;
-          display: block;
-          font-size: 28px;
-          font-weight: 500;
-          height: 40px;
-          margin-left: -250px;
-          margin-top: 40px;
-          left: 50%;
-          opacity: 0;
-          position: absolute;
-          text-align: center;
-          top: 50%;
-          width: 500px;
-          -webkit-transition: all 0.15s linear;
-          -moz-transition: all 0.15s linear;
-          -ms-transition: all 0.15s linear;
-          transition: all 0.15s linear; }
-          #work .work_wrapper .work_item .filter .text .fas {
-            display: block;
-            font-size: 14px;
-            margin-bottom: 10px; }
-  #work .work_wrapper:hover .work_item {
-    transform: scale(1.05); }
-    #work .work_wrapper:hover .work_item .filter {
-      opacity: 1; }
-      #work .work_wrapper:hover .work_item .filter .text {
-        margin-top: -20px;
-        opacity: 1; }
-
-.content form .gfield_checkbox li {
-  display: inline-block;
-  margin-right: 20px; }
-
-@media (min-width: 768px) and (max-width: 979px) {
-  header {
-    background: url("../img/home_mobile_3.jpg") no-repeat;
-    background-size: 100%;
-    background-attachment: fixed; }
-  header {
-    background: url("../img/home_mobile_3.jpg") no-repeat;
-    background-size: 100%;
-    background-attachment: fixed; }
-  #home_logo {
-    top: 0; }
-  #work .work_wrapper {
-    height: 300px;
-    width: calc(50% - 10px); }
-  #pricing .pricing_item {
-    padding: 0px 0px 0px 0px;
-    width: 100%; } }
-
-@media (min-width: 480px) and (max-width: 767px) {
-  header {
-    background: url("../img/home_mobile_3.jpg") no-repeat;
-    background-size: 100%;
-    background-attachment: fixed; }
-  header {
-    background: url("../img/home_mobile_3.jpg") no-repeat;
-    background-size: 100%;
-    background-attachment: fixed; }
-  #home_logo {
-    top: 0; }
-  #work .work_wrapper {
-    height: 300px;
-    width: calc(50% - 10px); }
-  #pricing .pricing_item {
-    padding: 0px 0px 0px 0px;
-    width: 100%; } }
-
-@media (min-width: 0px) and (max-width: 479px) {
-  header {
-    background: url("../img/home_mobile_3.jpg") no-repeat;
-    background-size: 100%;
-    background-attachment: fixed; }
-  header {
-    background: url("../img/home_mobile_3.jpg") no-repeat;
-    background-size: 100%;
-    background-attachment: fixed; }
-  #home_logo {
-    top: 0; }
-  #work .work_wrapper {
-    height: 300px;
-    width: calc(100% - 10px); }
-  #pricing .pricing_item {
-    padding: 0px 0px 0px 0px;
-    width: 100%; } }
+body{font-family:'Lato', sans-serif}#attention_bar_header .attention_bar_header_content h3{font-weight:500}header{background:#BDCBE8}header #nav_bar{background:transparent}header #nav_bar.top_navigation{border-bottom:none}header #nav_bar #primary_nav ul li a:link,header #nav_bar #primary_nav ul li a:visited{color:#000}header#header_home #home_logo .home_logo_text_wrapper,header#header_home #home_logo #home_logo_text_wrapper{margin-bottom:30px}header#header_home #home_logo .home_logo_text_wrapper h1,header#header_home #home_logo #home_logo_text_wrapper h1{color:#000;font-family:'Merriweather', serif;font-size:64px;font-weight:700;margin-bottom:10px}header#header_home #home_logo .home_logo_text_wrapper h2,header#header_home #home_logo #home_logo_text_wrapper h2{color:#000;font-size:28px;font-weight:500;line-height:32px}header#header_home #home_logo #home_page_nav ul li a:link,header#header_home #home_logo #home_page_nav ul li a:visited{background:#000;border:2px solid #000;border-radius:20px;color:#BDCBE8;letter-spacing:0px;font-size:18px;font-weight:700;padding:10px 20px;text-transform:none;transition:all 0.15s ease-in}header#header_home #home_logo #home_page_nav ul li a:hover,header#header_home #home_logo #home_page_nav ul li a:active{background:transparent;color:#000;opacity:1}header#header_page #page_title h1.heading,header#header_page #page_title h2.subheading{color:#000}header#header_page #page_title h1.heading{font-family:'Merriweather', serif;font-size:48px;font-weight:700;line-height:52px}header#header_page #page_title h2.subheading{font-size:28px;font-weight:500;line-height:32px}header#header_home_mobile{height:700px}header#header_home_mobile .mobile_navigation_bar{background:transparent}header#header_home_mobile .mobile_navigation_bar #mobileopen{color:#000}header#header_home_mobile #mobile_nav{background:rgba(189,203,232,0.9)}header#header_home_mobile #mobile_nav .mobile_nav_wrapper #mobileclose{color:#000}header#header_home_mobile #mobile_nav .mobile_nav_wrapper #main_nav ul li a:link,header#header_home_mobile #mobile_nav .mobile_nav_wrapper #main_nav ul li a:visited{color:#000}header#header_home_mobile #mobile_nav .mobile_nav_wrapper #mobile_search{display:none}header#header_home_mobile #home_logo.home_logo_mobile #home_logo_text_wrapper h1{color:#000;font-family:'Merriweather', serif;font-size:38px;line-height:42px;font-weight:700;margin-bottom:10px}header#header_home_mobile #home_logo.home_logo_mobile #home_logo_text_wrapper h2{color:#000;font-weight:500;font-size:24px;line-height:28px}header#header_home_mobile #home_logo.home_logo_mobile #home_page_nav ul li a:link,header#header_home_mobile #home_logo.home_logo_mobile #home_page_nav ul li a:visited{background:#000;border:2px solid #000;border-radius:20px;color:#BDCBE8;letter-spacing:0px;font-size:18px;font-weight:700;padding:10px 20px;text-transform:none;transition:all 0.15s ease-in}header#header_home_mobile #home_logo.home_logo_mobile #home_page_nav ul li a:hover,header#header_home_mobile #home_logo.home_logo_mobile #home_page_nav ul li a:active{background:transparent;color:#000;opacity:1}header#header_page_mobile{height:400px}header#header_page_mobile .mobile_navigation_bar{background:transparent}header#header_page_mobile .mobile_navigation_bar #mobileopen{color:#000}header#header_page_mobile #mobile_nav{background:rgba(189,203,232,0.9)}header#header_page_mobile #mobile_nav .mobile_nav_wrapper #mobileclose{color:#000}header#header_page_mobile #mobile_nav .mobile_nav_wrapper #main_nav ul li a:link,header#header_page_mobile #mobile_nav .mobile_nav_wrapper #main_nav ul li a:visited{color:#000}header#header_page_mobile #mobile_nav .mobile_nav_wrapper #mobile_search{display:none}header#header_page_mobile #page_title h1.heading,header#header_page_mobile #page_title h2.subheading{color:#000}header#header_page_mobile #page_title h1.heading{font-family:'Merriweather', serif;font-size:38px;font-weight:700;line-height:42px}header#header_page_mobile #page_title h2.subheading{font-size:24px;font-weight:500;line-height:28px}#parallax{background:url("../img/parallax.jpg") no-repeat;background-size:cover;background-attachment:fixed}#main{background:#F1F1F3;padding-top:100px}#main .content{margin-bottom:100px;text-align:center}#main .content h1,#main .content h2,#main .content h3{color:#000;font-family:'Merriweather', serif}#main .content h1{color:#000;font-family:'Merriweather', serif;font-size:42px;font-weight:700;letter-spacing:-1px;line-height:52px;margin-bottom:30px}#main .content hr.divider{margin:30px auto}#main .content p{color:#000;font-weight:500;font-size:24px;line-height:36px;margin-bottom:30px}#main .content strong{font-weight:700}#main .content .gform_wrapper .gform_body .gform_fields .gfield_label{color:#000;cursor:pointer;font-weight:500;font-size:24px;line-height:36px}#main .content .gform_wrapper .gform_body .gform_fields .gfield_description{color:#000;font-weight:500;font-size:18px;line-height:24px}#main .content .gform_wrapper .gform_body .gform_fields input+label{color:#000;font-weight:500;font-size:18px;line-height:24px}#main .content .gform_wrapper .gform_body .gform_fields input[type="radio"]+label,#main .content .gform_wrapper .gform_body .gform_fields input[type="checkbox"]+label{border:2px solid #000;border-radius:20px;color:#000;font-weight:500;font-size:18px;line-height:24px;margin-bottom:10px;padding:10px 20px}#main .content .gform_wrapper .gform_body .gform_fields input[type="text"],#main .content .gform_wrapper .gform_body .gform_fields input[type="tel"],#main .content .gform_wrapper .gform_body .gform_fields input[type="email"]{background:transparent;border:2px solid #000;border-radius:20px;font-size:18px;padding:10px 10px;-webkit-appearance:none;-moz-appearance:none;appearance:none}#main .content .gform_wrapper .gform_body .gform_fields input[type="radio"],#main .content .gform_wrapper .gform_body .gform_fields input[type="checkbox"]{border:0px;outline:0px;-webkit-appearance:none;-moz-appearance:none;appearance:none}#main .content .gform_wrapper .gform_body .gform_fields input[type="radio"]:hover+label,#main .content .gform_wrapper .gform_body .gform_fields input[type="checkbox"]:hover+label{background:#D0D4FF;border:2px solid #D0D4FF;cursor:pointer}#main .content .gform_wrapper .gform_body .gform_fields input[type="radio"]:checked+label,#main .content .gform_wrapper .gform_body .gform_fields input[type="checkbox"]:checked+label{background:#D4B8FF;border:2px solid #D4B8FF;padding:10px 20px;cursor:pointer}#main .content .gform_wrapper .gform_footer input[type="submit"]{background:#D4B8FF;border:2px solid #D4B8FF;border-radius:20px;color:#000;font-family:'Lato', sans-serif;font-weight:500;font-size:18px;letter-spacing:0px;line-height:24px;margin-bottom:10px;padding:10px 20px;text-transform:none}#main .content .gform_confirmation_wrapper .gform_confirmation_message{color:#D4B8FF;font-weight:500;font-size:24px;line-height:36px;margin-bottom:30px}#main .home_page_wrapper{padding:100px 0px}#main .home_page_wrapper .home_page_item{text-align:center}#main .home_page_wrapper .home_page_item h1{color:#000;font-family:'Merriweather', serif;font-size:42px;font-weight:700;letter-spacing:-1px;line-height:52px;margin-bottom:30px}#main .home_page_wrapper .home_page_item p{color:#000;font-weight:500;font-size:24px;line-height:36px;margin-bottom:30px}#main .home_page_wrapper.home_page_item_1{background-color:#D4B8FF}#main .home_page_wrapper.home_page_item_2{background-color:#BDCBE8}#main .home_page_wrapper.home_page_item_3{background-color:#C6E6FF}#main .home_page_wrapper.home_page_item_4{background-color:#D0D4FF}#main .home_page_wrapper.home_page_item_5{background-color:#D4B8FF}#main .subscription_wrapper{padding:100px 0px}#main .subscription_wrapper .subscription{text-align:center}#main .subscription_wrapper .subscription h1{color:#000;font-family:'Merriweather', serif;font-size:42px;font-weight:700;letter-spacing:-1px;line-height:52px;margin-bottom:30px}#main .subscription_wrapper .subscription p{color:#000;font-weight:500;font-size:24px;line-height:36px;margin-bottom:30px}#main .subscription_wrapper .subscription span.sublength{color:#000;display:block;font-size:24px;font-weight:700;letter-spacing:-1px}#main .subscription_wrapper .subscription span.cost{display:block;font-size:100px;font-weight:700;letter-spacing:-1px;padding:20px 0px}#main .subscription_wrapper .subscription span.cost span.dollar{font-size:50px;line-height:70px;vertical-align:top}#main .subscription_wrapper .subscription span.details_button{cursor:pointer;display:inline-block;background:#000;border-radius:20px;padding:10px 20px;font-size:18px;font-weight:700}#main .subscription_wrapper .subscription span.details_button:hover{opacity:.5}#main .subscription_wrapper .subscription .details{padding:50px 0px 0px 0px}#main .subscription_wrapper .subscription .details ul li{color:#000;font-size:20px;font-weight:500;line-height:28px}#main .subscription_wrapper.setup-fee{background-color:#D4B8FF}#main .subscription_wrapper.setup-fee span.details_button{color:#D4B8FF}#main .subscription_wrapper.basic-website{background-color:#BDCBE8}#main .subscription_wrapper.basic-website span.details_button{color:#BDCBE8}#main .subscription_wrapper.advanced-website{background-color:#C6E6FF}#main .subscription_wrapper.advanced-website span.details_button{color:#C6E6FF}#main .subscription_wrapper.special-project{background-color:#D0D4FF}#main .subscription_wrapper.special-project span.details_button{color:#D0D4FF}#main .subscription_wrapper.website-hosting{background-color:#D4B8FF}#main .subscription_wrapper.website-hosting span.details_button{color:#D4B8FF}#main .subscription_wrapper.domain-hosting{background-color:#BDCBE8}#main .subscription_wrapper.domain-hosting span.details_button{color:#BDCBE8}#main .subscription_wrapper.custom-online-forms{background-color:#C6E6FF}#main .subscription_wrapper.custom-online-forms span.details_button{color:#C6E6FF}#medical_wrapper{background:#D4B8FF;color:#000;padding:100px 0px}#medical_wrapper .medical_column{display:block;text-align:center;vertical-align:top}#medical_wrapper .medical_column img{display:block;height:70px;margin:0 auto;width:auto}#medical_wrapper .medical_column h3{color:#000;display:block;font-family:'Merriweather', serif;font-size:28px;font-weight:500;letter-spacing:-1px;line-height:32px;margin:30px 0px 20px 0px;text-align:center}#medical_wrapper .medical_column p{color:#000;display:block;font-size:20px;font-weight:500;line-height:28px}#medical_wrapper .medical_column a:link,#medical_wrapper .medical_column a:visited{background:#000;border:2px solid #000;border-radius:20px;color:#D4B8FF;display:inline-block;font-weight:600;margin-top:30px;padding:10px 20px;text-decoration:none;transition:all 0.15s ease-in}#medical_wrapper .medical_column a:hover,#medical_wrapper .medical_column a:active{background:transparent;color:#000}#medical_wrapper_2 .medical_row{padding:100px 0px;text-align:center}#medical_wrapper_2 .medical_row:nth-child(odd){background:#C6E6FF}#medical_wrapper_2 .medical_row h3{color:#000;font-family:'Merriweather', serif;font-size:42px;font-weight:700;letter-spacing:-1px;line-height:52px;margin-bottom:30px}#medical_wrapper_2 .medical_row p{color:#000;font-weight:500;font-size:24px;line-height:36px;margin-bottom:30px}#med_feature_wrapper{padding-top:100px}#med_feature_wrapper .med_feature_row .med_feature_item{background:#BDCBE8;border-radius:5px;display:inline-block;margin:0px 10px 20px 10px;padding:20px;width:calc(50% - 60px)}#med_feature_wrapper .med_feature_row .med_feature_item i{background:rgba(241,241,243,0.1);border-radius:5px;color:#F1F1F3;display:block;float:left;height:40px;font-size:24px;line-height:40px;margin:0px 20px 0px 0px;text-align:center;width:40px}#med_feature_wrapper .med_feature_row .med_feature_item h3{color:#000;display:block;font-family:'Merriweather', serif;font-size:28px;font-weight:500;letter-spacing:-1px;line-height:32px;margin:30px 30px 20px 0px;text-align:center}#med_feature_wrapper .med_feature_row .med_feature_item p{color:#000;display:block;font-size:20px;font-weight:500;line-height:28px}footer{background:#F1F1F3}footer #logo_footer h2{color:#000;font-weight:500}#copyright{background:#F1F1F3}#copyright #copyright_content p{color:#000}#copyright #copyright_content a:link,#copyright #copyright_content a:visited{color:#000}@media (min-width: 768px) and (max-width: 979px){header{background:#BDCBE8}#main .content h1{font-size:32px;line-height:36px}#main .home_page_wrapper .home_page_item h1{font-size:32px;line-height:36px}#main .subscription_wrapper .subscription h1{font-size:32px;line-height:36px}#medical_wrapper_2 .medical_row h3{font-size:32px;line-height:36px}}@media (min-width: 480px) and (max-width: 767px){header{background:#BDCBE8}#main .content h1{font-size:32px;line-height:36px}#main .home_page_wrapper .home_page_item h1{font-size:32px;line-height:36px}#main .subscription_wrapper .subscription h1{font-size:32px;line-height:36px}#medical_wrapper_2 .medical_row h3{font-size:32px;line-height:36px}#med_feature_wrapper .med_feature_row .med_feature_item{width:calc(100% - 60px)}}@media (min-width: 0px) and (max-width: 479px){header{background:#BDCBE8}header#header_home_mobile #home_logo.home_logo_mobile{margin-top:-250px}#main .content h1{font-size:32px;line-height:36px}#main .home_page_wrapper .home_page_item h1{font-size:32px;line-height:36px}#main .subscription_wrapper .subscription h1{font-size:32px;line-height:36px}#medical_wrapper_2 .medical_row h3{font-size:32px;line-height:36px}#med_feature_wrapper .med_feature_row .med_feature_item{width:calc(100% - 60px)}}
