Updated Child Theme Design
Updated child theme files to reflect new website design.

--- a/thegalaxy-child/css/custom.scss
+++ b/thegalaxy-child/css/custom.scss
@@ -764,6 +764,17 @@ footer {
 			color: $darkfont;
 		}
 	}
+	
+	#social_nav {
+		ul {
+			li {
+				a:link,
+				a:visited {
+					color: $darkfont;
+				}
+			}
+		}
+	}
 }
 
 
